# ttfs

./: CMakeLists.txt  Makefile  README.md  umbra-demo  umbra_paper.txt
data/: customers.csv  orders.csv
src/: main.cpp
src/backend/: flying_start.cpp  flying_start.hpp
src/codegen/: codegen_types.hpp  sql_value.hpp  tuple_ops.hpp
src/io/: csv_loader.hpp
src/ir/: ir_printer.hpp  umbra_ir.cpp  umbra_ir.hpp
src/operators/: compilation_context.hpp  hash_join_translator.cpp  hash_join_translator.hpp  operator_base.hpp  scan_translator.cpp  scan_translator.hpp  select_translator.cpp  select_translator.hpp
src/sql/: sql_ast.hpp  sql_catalog.cpp  sql_catalog.hpp  sql_lexer.cpp  sql_lexer.hpp  sql_parser.cpp  sql_parser.hpp  sql_planner.cpp  sql_planner.hpp  sql_runner.cpp  sql_runner.hpp
tests/: test_runner.cpp
